Contrast fix restaurant.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #005096;
     text-decoration: none;
 }
 
@@ -215,7 +215,7 @@ nav h1 a {
   width: 50%;
 }*/
 #restaurant-name {
-  color: #f18200;
+  color: #aa5a00;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -257,7 +257,7 @@ nav h1 a {
   padding: 30px 0px 30px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #7f4200;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
